Ensure all dark mode-specific CSS is inside colour theme files

--- a/public/themes/aura-light-green/theme.css
+++ b/public/themes/aura-light-green/theme.css
@@ -2,6 +2,11 @@ body {
   background-color: #FFF;
 }
 
+footer, .nav-buttons {
+  transition: color 0.5s, background-color 0.5s;
+  background-color: seashell!important;
+}
+
 #results-container {
   /* MEDIUM: this is a hack to make downloaded images look OK on macOS, but
   it's not a guarantee that it'll look OK on all OSes... */
